# snp-guard

./: .dockerignore  .gitignore  ATTESTATION_URL_FLOW.md  Cargo.toml  Dockerfile  Makefile  README.md  REQUIREMENTS_CHECKLIST.md  SECURITY.md  deploy.sh  docker-compose.yml  fly.toml
docs/: api.md  architecture.md  initrd_support.md  user_guide.md
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  token.rs  vm.rs  vm_registration.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_create_vm_table.rs  m20250201_000002_create_tokens_table.rs  m20250301_000003_create_attestation_records_table.rs  main.rs
protos/: attestation.proto
scripts/: generate-certs.sh  launch-qemu-snp.sh  repack-initrd.sh
scripts/initramfs-tools/: attest-offline.sh  attest-online.sh  attest.sh  hook.sh
src/boot/src/: lib.rs  sev.rs
src/client/: Cargo.toml  local_ops.rs  main.rs
src/common/: Cargo.toml  build.rs
src/common/src/: lib.rs
src/image/: Cargo.toml  grub_parser.rs  initrd.rs  local_ops.rs  main.rs
src/server/: Cargo.toml  artifacts.rs  attestation.rs  auth.rs  business_logic.rs  config.rs  grpc.rs  grpc_client.rs  grpc_service.rs  identity_key.rs  ingestion_key.rs  main.rs  master_key.rs  master_password.rs  nonce.rs  rest_api.rs  service_core.rs  snpguest_wrapper.rs  web.rs
src/server/templates/: base.html  create.html  edit.html  index.html  login.html  tokens.html
ui/templates/: edit.html  index.html
