[package]
name = "snpguard-client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["rt", "macros"] }
prost = "0.12"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }