[package]
name = "snpguard-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snpguard-client"
path = "main.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["rt", "macros"] }
prost = "0.13"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
sev = { version = "7.1.0", default-features = false, features = ["snp"] }
dirs = "5"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
hex = "0.4"
# HPKE for encrypting unsealing private key
hpke = "0.10"
pem = "3.0"
rand = { version = "0.8", features = ["std_rng"] }
sha2 = "0.10"