[package]
name = "snpguard-image"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snpguard-image"
path = "main.rs"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5"
hpke = "0.10"
scopeguard = "1.2"

pem = "3.0"
rand = { version = "0.8", features = ["std_rng"] }
guestfs = "0.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
flate2 = "1.0"
cpio = "0.2"
zstd = "0.13"
tempfile = "3"