[package]
name = "snpguard-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snpguard-server"
path = "main.rs"

[dependencies]
# Internal crates
entity = { path = "../../entity" }
migration = { path = "../../migration" }
common = { path = "../common" }

# Web / Async (latest stable)
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-macros = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }

# Protobuf
prost = "0.13"

# TLS - use axum's built-in TLS support
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
tokio-rustls = "0.24"

# DB
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
argon2 = "0.5"
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
ring = "0.17"
thiserror = "1.0"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
