[package]
name = "snpguard-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snpguard-server"
path = "main.rs"

[dependencies]
# Internal crates
entity = { path = "../../entity" }
migration = { path = "../../migration" }
common = { path = "../common" }

# Web / Async (latest stable)
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-macros = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
futures-util = "0.3"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Protobuf
prost = "0.13"

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"

# DB
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
argon2 = "0.5"
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
ring = "0.17"
thiserror = "1.0"
sev = { version = "7.1.0", default-features = false, features = ["snp"] }
once_cell = "1.19"
cookie = "0.18"
openssl = { version = "0.10", features = ["vendored"] }
rcgen = "0.12"